# imu_3dm_gx4

./: CMakeLists.txt  README.md  package.xml
cfg/: default_settings.yaml
include/imu_3dm_gx4/: imu.hpp
launch/: imu.launch  merge.launch
msg/: FilterOutput.msg  MagFieldCF.msg
src/: imu.cpp  imu.hpp  imu_3dm_gx4.cpp  merge_imu_filter.cpp
